# apollo.nvim

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cmake_build.sh  fix.sh
C/: chunks.c  chunks.h  cosine_neon.c  cosine_neon.h  cosine_simd.c  cosine_simd.h
lib/: chunks.dylib  cosine_neon.dylib
lua/: apollo.lua
lua/apollo/: apollo-menu.lua  apolloMenu.lua  context_chat.lua  documenter.lua  implAgent.lua  indexer.lua  init.lua  ragIndexer.lua
plugin/: apollo.lua  init.lua
simd/: cosine_neon.c
